[gd_scene load_steps=2 format=2]

[ext_resource path="res://Characters/Boxes/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="HurtArea" type="CollisionShape2D" parent="."]

[node name="InvenvibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="InvenvibleTimer" to="." method="_on_Timer_timeout"]
